dataset1235/2025-2/1379599236/users/1049735031/executions/2277843042_704983377.log
== SUBMISSION (2025-08-18 18:04:44)
-- CODE: 
X = int(input("Digite o valor de X (dividendo): "))
Y = int(input("Digite o valor de Y (divisor): "))
print("Quociente da divisão inteira:", quociente_inteira)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y", produto)
print("Y elevado a terceira potência:", potência)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 18:10:56)
-- CODE: 
int(input("Digite o valor de X (dividendo): "))
int(input("Digite o valor de Y (divisor): "))
print("Quociente da divisão inteira:", quociente_inteira)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y", produto)
print("Y elevado à terceira potência:", potência)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 18:04:48)
-- CODE: 
X = int(input("Digite o valor de X (dividendo): "))
Y = int(input("Digite o valor de Y (divisor): "))
print("Quociente da divisão inteira:", quociente_inteira)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y", produto)
print("Y elevado a terceira potência:", potência)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 18:10:53)
-- CODE: 
int(input("Digite o valor de X (dividendo): "))
int(input("Digite o valor de Y (divisor): "))
print("Quociente da divisão inteira:", quociente_inteira)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y", produto)
print("Y elevado à terceira potência:", potência)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 18:04:30)
-- CODE: 
X = int(input("Digite o valor de X (dividendo): "))
Y = int(input("Digite o valor de Y (divisor): "))
quociente_inteira = X // Y
resto = X % Y
quociente_real = X / Y
produto = X * Y
potencia = Y ** 3
print("Quociente da divisão inteira:", quociente_inteira)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y", produto)
print("Y elevado a terceira potência:", potência)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print("Y elevado a terceira potência:", potência)
                                            ^^^^^^^^
NameError: name 'potência' is not defined. Did you mean: 'potencia'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print("Y elevado a terceira potência:", potência)
                                            ^^^^^^^^
NameError: name 'potência' is not defined. Did you mean: 'potencia'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print("Y elevado a terceira potência:", potência)
                                            ^^^^^^^^
NameError: name 'potência' is not defined. Did you mean: 'potencia'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print("Y elevado a terceira potência:", potência)
                                            ^^^^^^^^
NameError: name 'potência' is not defined. Did you mean: 'potencia'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print("Y elevado a terceira potência:", potência)
                                            ^^^^^^^^
NameError: name 'potência' is not defined. Did you mean: 'potencia'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print("Y elevado a terceira potência:", potência)
                                            ^^^^^^^^
NameError: name 'potência' is not defined. Did you mean: 'potencia'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 18:38:52)
-- CODE: 
x = int(input("Qual o  valor de x? "))
y = int(input("Qual o valor de y? "))

quociente = x/y
resto = x%y

print(int(quociente))
print(resto)

print(quociente)
print(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 18:38:50)
-- CODE: 
x = int(input("Qual o  valor de x? "))
y = int(input("Qual o valor de y? "))

quociente = x/y
resto = x%y

print(int(quociente))
print(resto)

print(quociente)
print(x*y)
print(y**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 17:53:48)
-- CODE: 
X = int(input("Digite o valor de X (dividendo): "))
Y = int(input("Digite o valor de Y (divisor): "))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Digite o valor de X (dividendo): Digite o valor de Y (divisor):
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Digite o valor de X (dividendo): Digite o valor de Y (divisor):
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Digite o valor de X (dividendo): Digite o valor de Y (divisor):
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Digite o valor de X (dividendo): Digite o valor de Y (divisor):
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Digite o valor de X (dividendo): Digite o valor de Y (divisor):
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Digite o valor de X (dividendo): Digite o valor de Y (divisor):
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 18:39:43)
-- CODE: 
x = int(input("Qual o  valor de x? "))
y = int(input("Qual o valor de y? "))

quociente = x/y
resto = x%y

print(int(quociente))
print(resto)

print(quociente)
print(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 18:10:17)
-- CODE: 
X = int(input("Digite o valor de X (dividendo): "))
Y = int(input("Digite o valor de Y (divisor): "))
print("Quociente da divisão inteira:", quociente_inteira)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y", produto)
print("Y elevado à terceira potência:", potência)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Quociente da divisão inteira:", quociente_inteira)
                                           ^^^^^^^^^^^^^^^^^
NameError: name 'quociente_inteira' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
